codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__countdown__tests__approval_overlay_expired_command.snap
---
source: tui/src/bottom_pane/approval_countdown_tests.rs
assertion_line: 23
expression: "render_overlay_lines(&view, 80)"
---

  Would you like to run the following command?

  Reason: reason

  $ echo hi


› 1. Yes, proceed (y)
  2. No, and tell Codex what to do differently (esc)

  Rejecting automatically
